--- a/app/build.gradle
+++ b/app/build.gradle
@@ -135,15 +135,6 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$versions.okHttp"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit"
 
-    //Firebase
-    implementation "com.google.firebase:firebase-messaging:$versions.firebaseMessaging"
-    implementation "com.google.firebase:firebase-core:$versions.firebaseCore"
-
-    // Crashlytics
-    implementation("com.crashlytics.sdk.android:crashlytics:$versions.crashlytics") {
-        transitive = true
-    }
-
     // RxJava
     implementation "io.reactivex.rxjava2:rxandroid:$versions.rxAndroid"
     implementation "io.reactivex.rxjava2:rxjava:$versions.rxJava"
@@ -159,5 +150,7 @@ dependencies {
     // Various dependencies
     implementation "com.greysonparrelli.permiso:permiso:$versions.premiso"
     implementation "com.github.bumptech.glide:glide:$versions.glide"
+    implementation "com.jakewharton.threetenabp:threetenabp:$versions.threetenabp"
+    implementation "com.jakewharton.rxbinding:rxbinding:$versions.rxbinding"
 
 }
