--- a/build.gradle
+++ b/build.gradle
@@ -2,42 +2,44 @@
 
 buildscript {
     ext.versions = [
-            'gradle' : "3.5.1",
-            'kotlin' : "1.3.50",
-            'appcompat':"1.1.0",
-            'coreKtx':"1.1.0",
-            'constraintlayout':"1.1.3",
-            'legacySupportV4':"1.0.0",
-            'junit':"4.12",
-            'archCore': "2.1.0",
-            'roboelectric': "4.3",
-            'espresso': "3.2.0",
-            'truth': "0.44",
-            'mockWebServer': "4.2.1",
-            'mockito':"3.1.0",
-            'dexMaker': "2.12.1",
-            'androidxTestCore':"1.2.0-beta01",
-            'androidxTestExtKotlinRunner':"1.1.1-beta01",
-            'androidxTestRules':"1.2.0-beta01",
-            'fragmentTesting': "1.1.0",
-            'testCore': "1.2.0",
-            'room': "2.2.0",
-            'navigation': "2.2.0-beta01",
-            'archLifecycle' : "2.2.0-beta01",
-            'rxRoom' : "1.1.1",
-            'dagger' : "2.24",
-            'retrofit' : "2.6.1",
-            'okHttp' : "4.1.0",
-            'firebaseCore': "17.2.0",
-            'firebaseMessaging' : "20.0.0",
-            'crashlytics' : "2.10.1",
-            'rxAndroid' : "2.1.1",
-            'rxJava' : "2.2.11",
-            'rxProguard': "1.3.3.0",
-            'parceler' : "1.1.12",
-            'material' : "1.1.0-beta01",
-            'premiso': "0.3.0",
-            'glide': "4.9.0"
+            'gradle'                      : "3.5.1",
+            'kotlin'                      : "1.3.50",
+            'appcompat'                   : "1.1.0",
+            'coreKtx'                     : "1.1.0",
+            'constraintlayout'            : "1.1.3",
+            'legacySupportV4'             : "1.0.0",
+            'junit'                       : "4.12",
+            'archCore'                    : "2.1.0",
+            'roboelectric'                : "4.3",
+            'espresso'                    : "3.2.0",
+            'truth'                       : "0.44",
+            'mockWebServer'               : "4.2.1",
+            'mockito'                     : "3.1.0",
+            'dexMaker'                    : "2.12.1",
+            'androidxTestCore'            : "1.2.0-beta01",
+            'androidxTestExtKotlinRunner' : "1.1.1-beta01",
+            'androidxTestRules'           : "1.2.0-beta01",
+            'fragmentTesting'             : "1.1.0",
+            'testCore'                    : "1.2.0",
+            'room'                        : "2.2.0",
+            'navigation'                  : "2.2.0-beta01",
+            'archLifecycle'               : "2.2.0-beta01",
+            'rxRoom'                      : "1.1.1",
+            'dagger'                      : "2.24",
+            'retrofit'                    : "2.6.1",
+            'okHttp'                      : "4.1.0",
+            'firebaseCore'                : "17.2.0",
+            'firebaseMessaging'           : "20.0.0",
+            'crashlytics'                 : "2.10.1",
+            'rxAndroid'                   : "2.1.1",
+            'rxJava'                      : "2.2.11",
+            'rxProguard'                  : "1.3.3.0",
+            'parceler'                    : "1.1.12",
+            'material'                    : "1.1.0-beta01",
+            'premiso'                     : "0.3.0",
+            'glide'                       : "4.9.0",
+            'threetenabp'                 : "1.2.1",
+            'rxbinding'                   : "0.4.0"
     ]
 
     repositories {
