--- a/app/build.gradle
+++ b/app/build.gradle
@@ -152,5 +152,6 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$versions.glide"
     implementation "com.jakewharton.threetenabp:threetenabp:$versions.threetenabp"
     implementation "com.jakewharton.rxbinding:rxbinding:$versions.rxbinding"
+    implementation "com.mikhaellopez:circularimageview:$versions.circularimageview"
 
 }
