--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,10 @@ buildscript {
             'androidxTestRules'           : "1.2.0-beta01",
             'fragmentTesting'             : "1.1.0",
             'testCore'                    : "1.2.0",
-            'room'                        : "2.2.2",
-            'navigation'                  : "2.2.0-beta01",
-            'archLifecycle'               : "2.2.0-beta01",
+            'room'                        : "2.2.3",
+            'navigation'                  : "2.2.0",
+            'pagination'                  : "2.1.1",
+            'archLifecycle'               : "2.2.0",
             'rxRoom'                      : "1.1.1",
             'dagger'                      : "2.24",
             'retrofit'                    : "2.6.1",
@@ -39,7 +40,7 @@ buildscript {
             'premiso'                     : "0.3.0",
             'glide'                       : "4.9.0",
             'threetenabp'                 : "1.2.1",
-            'rxbinding'                   : "0.4.0",
+            'rxbinding'                   : "3.0.0-alpha2",
             'circularimageview'           : "4.1.1"
     ]
 
